--- a/style.css
+++ b/style.css
@@ -11,8 +11,9 @@
 
 :root {
     --muted: #b3b3b3;
-    --gray: #282727f4;
-    --light_gray: #424040d9;
+    --white: #ececece8;
+    --gray: #151515f4;
+    --light_gray: #323131e3;
 }
 
 html {
@@ -24,7 +25,7 @@ body {
     width: 100%;
     height: 100vh;
     overflow-x: hidden;
-    background-color: #101010d4;
+    background-color: black;
     color: white;
 }
 
@@ -102,6 +103,11 @@ header {
     font-size: 1.4rem;
 }
 
+.header__search input:hover {
+    background-color: var(--light_gray);
+    border: solid 1px var(--muted);
+}
+
 .header__nav {
     display: flex;
     align-items: center;
@@ -150,4 +156,135 @@ header {
 
 .btn__install, .btn__signup {
     background-color: black;
+}
+
+.btn__login {
+    background-color: var(--gray);
+}
+
+/* MAIN */
+.main-container {
+    width: 100vw;
+    margin-top: 80px;
+    padding: 4px;
+    display: flex;
+}
+
+.sidebar {
+    width: 24vw;
+    height: 100vh;
+    background-color: var(--gray);
+    margin: 0 1vw;
+    padding: 20px;
+    border-radius: 4px;
+}
+
+.sidebar__header {
+    font-size: 1.6rem;
+    font-weight: 700;
+    margin-bottom: 24px;
+    color: var(--white);
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.sidebar__plus {
+    font-size: 1.6rem;
+    font-weight: bold;
+    color: var(--muted);
+    cursor: pointer;
+    position: relative;
+}
+
+.sidebar__plus--btn {
+    position: absolute;
+    width: 200px;
+    right: -24px;
+    top: 32px;
+    background-color: var(--light_gray);
+    padding: 12px 16px;
+    border-radius: 8px;
+    box-shadow: 0 0 20px var(--gray);
+    font-size: 1.2rem;
+    display: none;
+}
+
+.sidebar__plus--btn::before {
+    content: '';
+    position: absolute;
+    top: -10px;
+    right: 20px;
+    width: 0;
+    height: 0;
+    border-left: 10px solid transparent;
+    border-right: 10px solid transparent;
+    border-bottom: 10px solid var(--light_gray);
+}
+
+.sidebar__plus--btn i {
+    margin-right: 8px;
+}
+
+.sidebar__section {
+    margin-bottom: 32px;
+    width: 100%;
+    padding: 20px 20px;
+    background-color: var(--light_gray);
+    border-radius: 8px;
+}
+
+.sidebar__title {
+    font-size: 1.6rem;
+    font-weight: bold;
+    margin-bottom: 12px;
+    color: var(--white);
+}
+
+.sidebar__text {
+    font-size: 1.4rem;
+    margin-bottom: 12px;
+    transition: color 0.3s ease;
+    color: var(--white);
+}
+
+.sidebar__btn {
+    color: var(--gray);
+    margin-top: 12px;
+    padding: 10px 16px;
+    font-size: 1.4rem;
+    font-weight: bold;
+    border-radius: 30px;
+    background-color: var(--white);
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+}
+
+.sidebar__btn:hover {
+    padding: 10px 18px;
+    transform: translate(-2px, 0);
+}
+
+.sidebar__footer {
+    margin: 0 4px;
+}
+
+.sidebar__footer a {
+    font-size: 1.2rem;
+    color: var(--muted);
+    margin-left: 8px;
+    transition: color 0.3s ease;
+}
+
+.main-content {
+    width: 72vw;
+    height: 100vh;
+    background-color: var(--gray);
+    margin-right: 0 1vw;
+    border-radius: 8px;
+}
+
+
+.active {
+    display: flex;
 }
